--- a/assignments/todo_list/todo.html
+++ b/assignments/todo_list/todo.html
@@ -1,13 +1,18 @@
 <html>
-    <head>
-        <title>Todo List</title>
-    </head>
-    <body>
-        <div>
-            <input type='text' name='todo_input'>
-            <button type='submit'>Add Todo</button>
-            <div class='todos'></div>
-        </div>
-    </body>
-    <script src='./script.js'></script>
+  <head>
+    <title>Todo List</title>
+  </head>
+  <body>
+    <div>
+      <input type="text" name="todo_input" />
+      <button type="submit">Add Todo</button>
+      <select id="dropDown">
+        <option>--Select Here--</option>
+        <option value="Completed">Completed Items</option>
+        <option value="InProgress">Pending Items</option>
+      </select>
+      <div class="todos"></div>
+    </div>
+  </body>
+  <script src="./script.js"></script>
 </html>
